--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
     </style>
 </head>
 <body>
+    <script src="/logic.js"></script>
     <button id="custom-install-button" hidden>
     Install My App! 📲
     </button>
@@ -163,5 +164,6 @@
 
 </body>
 </html>
+
 
 
